# xuanshiai

./: .env.example  .gitignore  AGENTS.md  PROJECT_RULES.md  README.md  database_setup_marriage.py  main.py  pyproject.toml  requirements.txt  表.md
app/: main.py
app/api/: dependencies.py  router.py
app/core/: config.py  redis.py  security.py
app/db/: __init__.py  business_schema.py  session.py
app/models/: __init__.py  base.py
app/schemas/: admin.py  auth.py  certifications.py  common.py  community.py  discovery.py  finance.py  matchmaker.py  meeting.py  membership.py  organization.py  points.py  presence.py  regions.py  social.py
app/services/: auth.py  certifications.py  common.py  community.py  discovery.py  finance.py  identity.py  matchmaker.py  meeting.py  membership.py  organization.py  points.py  presence.py  profile.py  regions.py  social.py
docs/: DEVELOPMENT.md  会员体系和积分体系设计.md  后端功能模块任务划分清单.md  后端已有接口与功能总览.md  后端模糊点确认清单.md  婚恋小程序功能清单评估结果.md  婚恋小程序功能规格书.md  婚恋小程序后端开发规格书.md  宣誓爱基本功能架构（清爽版）.md  表.md
docs/api/: admin.md  auth.md  certifications.md  community.md  discovery.md  finance.md  identity.md  matchmaker.md  meeting.md  membership.md  organization.md  points.md  presence.md  profile.md  regions.md  social.md
tests/: test_auth_mock.py  test_auth_schemas.py  test_business_features.py  test_community_features.py  test_database_bootstrap.py  test_discovery_features.py  test_health.py  test_identity_schemas.py  test_matchmaker_features.py  test_pricing_config.py  test_profile_features.py  test_regions.py  test_social_features.py
(+23 files in other folders)
