[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xuanshiai-api"
version = "0.1.0"
description = "FastAPI backend service for Xuanshi AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiomysql>=0.2,<1.0",
    "redis>=5.2,<6.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-multipart>=0.0.17,<1.0",
    "pillow>=10,<13",
    "aiofiles>=24,<25",
    "qrcode[pil]>=7.4,<9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
